fix: change operator size, button gaps

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,8 @@ body {
 
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    padding-bottom: 5px;
+    gap: 8px;
+    padding-bottom: 8px;
 }
 
 #calc-screen {
@@ -45,8 +45,8 @@ body {
 .keypadRow {
     display: flex;
     flex: 1;
-    gap: 5px;   
-    padding: 0 5px;
+    gap: 8px;   
+    padding: 0 8px;
 }
 
 .keypadRow button {
@@ -55,10 +55,14 @@ body {
     justify-content: center;
     align-items: center;
 
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 500;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 0 3px lightgrey;
+}
+
+.keypadRow .arithmeticKeys {
+    font-size: 50px;
 }
 
 .numberKeys {
@@ -126,6 +130,5 @@ body {
 #equalsBtn:active {
     background-color: rgb(4, 84, 4);
 }
-
 
 
